Change scalable syslog to cf syslog drain
Signed-off-by: Brady Love <blove@pivotal.io>

--- a/pipelines/loggregator/coconut.yml
+++ b/pipelines/loggregator/coconut.yml
@@ -23,10 +23,10 @@ resources:
   source:
     uri: https://github.com/cloudfoundry/loggregator
     branch: develop
-- name: scalable-syslog-release
+- name: cf-syslog-drain-release
   type: git
   source:
-    uri: https://github.com/cloudfoundry/scalable-syslog-release
+    uri: https://github.com/cloudfoundry/cf-syslog-drain-release
 
 jobs:
 - name: restage-logspinners
@@ -148,11 +148,11 @@ jobs:
   serial: true
   plan:
   - get: loggregator-ci
-  - get: scalable-syslog-release
+  - get: cf-syslog-drain-release
   - get: 1h
     trigger: true
   - task: v2-drain
-    file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
+    file: loggregator-ci/tasks/cf-syslog-drain-smoke-test.yml
     params:
       CF_ORG: system
       CF_SPACE: blackbox-testing
@@ -171,11 +171,11 @@ jobs:
   serial: true
   plan:
   - get: loggregator-ci
-  - get: scalable-syslog-release
+  - get: cf-syslog-drain-release
   - get: 1h
     trigger: true
   - task: v2-drain
-    file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
+    file: loggregator-ci/tasks/cf-syslog-drain-smoke-test.yml
     params:
       TEARDOWN: false
       CF_ORG: system
