--- a/pipelines/loggregator/pws-eu.yml
+++ b/pipelines/loggregator/pws-eu.yml
@@ -20,10 +20,10 @@ resources:
   source:
     uri: https://github.com/cloudfoundry/loggregator
     branch: develop
-- name: scalable-syslog-release
+- name: cf-syslog-drain-release
   type: git
   source:
-    uri: https://github.com/cloudfoundry/scalable-syslog-release
+    uri: https://github.com/cloudfoundry/cf-syslog-drain-release
 
 jobs:
 - name: restage-logspinners
@@ -143,11 +143,11 @@ jobs:
   serial: true
   plan:
   - get: loggregator-ci
-  - get: scalable-syslog-release
+  - get: cf-syslog-drain-release
   - get: 1h
     trigger: true
   - task: v2-drain
-    file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
+    file: loggregator-ci/tasks/cf-syslog-drain-smoke-test.yml
     params:
       CF_SYSTEM_DOMAIN: "eu-pws.pivotal.io"
       CF_USERNAME: {{pws-eu-username}}
