Remove unused environments
* Science pipeline defaults to V2 API

--- a/pipelines/loggregator/cf-syslog-drain.yml
+++ b/pipelines/loggregator/cf-syslog-drain.yml
@@ -178,117 +178,6 @@ jobs:
       repository: bumped-cf-syslog-drain-release
       rebase: true
 
-- name: cf-syslog-drain-standalone-deploy
-  serial: true
-  plan:
-  - aggregate:
-    - get: scalable-syslog
-      trigger: true
-      passed:
-      - bump-release-submodule
-    - get: cf-syslog-drain-release
-      trigger: true
-    - get: deployments-loggregator
-      trigger: false
-    - get: consul-release
-      trigger: false
-  - task: upload-cf-syslog-drain
-    config:
-      image_resource:
-        type: docker-image
-        source:
-          repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
-      platform: linux
-      inputs:
-        - name: deployments-loggregator
-        - name: cf-syslog-drain-release
-        - name: consul-release
-      run:
-        path: bash
-        args:
-          - -c
-          - |
-            #!/bin/bash
-            set -eux
-            pushd deployments-loggregator/gcp/coconut-bbl
-              export BOSH_CLIENT=`bbl director-username`
-              export BOSH_CLIENT_SECRET=`bbl director-password`
-              export BOSH_CA_CERT=`bbl director-ca-cert`
-              export BOSH_ENVIRONMENT=`bbl director-address`
-            popd
-
-            for release in $(find consul-release -name '*.tgz'); do
-              bosh upload-release $release
-            done
-
-            pushd cf-syslog-drain-release
-                bosh create-release
-                bosh upload-release --rebase
-            popd
-  - task: deploy-cf-syslog-drain
-    config:
-      image_resource:
-        type: docker-image
-        source:
-          repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
-      platform: linux
-      inputs:
-      - name: deployments-loggregator
-      - name: cf-syslog-drain-release
-      outputs:
-      - name: updated-deployments-loggregator
-      params:
-      run:
-        path: bash
-        args:
-          - -c
-          - |
-            #!/bin/bash
-            set -eux
-
-            pushd deployments-loggregator/gcp/coconut-bbl
-              export BOSH_CLIENT=`bbl director-username`
-              export BOSH_CLIENT_SECRET=`bbl director-password`
-              export BOSH_CA_CERT=`bbl director-ca-cert`
-              export BOSH_ENVIRONMENT=`bbl director-address`
-            popd
-
-            ss_dir="$PWD/cf-syslog-drain-release"
-            deployment_dir="$PWD/deployments-loggregator/gcp/coconut-bbl"
-
-            bosh -n -d cf-syslog-drain-standalone deploy \
-              --vars-store "$deployment_dir/cf-syslog-drain-standalone-vars.yml" \
-              --ops-file "$ss_dir/manifests/fake-ops.yml" \
-              --ops-file "$deployment_dir/ops-files/cf-syslog-drain/standalone.yml" \
-              "$ss_dir/manifests/cf-syslog-drain.yml"
-
-            rsync -ac deployments-loggregator/ updated-deployments-loggregator
-  - task: commit
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: loggregator/base
-      inputs:
-      - name: updated-deployments-loggregator
-      outputs:
-      - name: committed-deployments-loggregator
-      params:
-        SOURCE: updated-deployments-loggregator
-        PATHS: gcp/coconut-bbl/cf-syslog-drain-standalone-vars.yml
-        COMMIT_MESSAGE: "Update cf-syslog-drain vars store"
-        OUTPUT: committed-deployments-loggregator
-      run:
-        path: bash
-        args:
-        - -c
-        - {{commit}}
-  - put: deployments-loggregator-with-changes
-    params:
-      repository: committed-deployments-loggregator
-      rebase: true
-
 - name: cf-syslog-drain-deploy
   serial: true
   plan:
@@ -410,7 +299,7 @@ jobs:
     - get: develop
       resource: cf-syslog-drain-release
       trigger: true
-      passed: ["cf-syslog-drain-deploy", "cf-syslog-drain-standalone-deploy"]
+      passed: ["cf-syslog-drain-deploy"]
     - get: release-elect
       resource: cf-syslog-drain-release-release-elect
     - get: loggregator-ci
