Get cf-syslog-drain-release resource
Signed-off-by: Johanna Smith <josmith@pivotal.io>

--- a/pipelines/loggregator/capacity-planning.yml
+++ b/pipelines/loggregator/capacity-planning.yml
@@ -108,6 +108,7 @@ jobs:
   serial: true
   plan:
     - aggregate:
+      - get: cf-syslog-drain-release
       - get: loggregator-ci
       - get: bbl-state
         resource: deployments-loggregator
