Add bosh cleanup task to capacity planning
Signed-off-by: Johanna Smith <josmith@pivotal.io>

--- a/pipelines/loggregator/capacity-planning.yml
+++ b/pipelines/loggregator/capacity-planning.yml
@@ -293,6 +293,10 @@ jobs:
       params:
         repository: updated-capacity-planning-vars-store
         rebase: true
+    - task: cleanup
+      file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
+      params:
+        BBL_STATE_DIR: gcp/loggregator-capacity-planning
 
 - name: datadog-nozzle-deploy
   serial: true
